# ComfyUI-Open-Sora

./: README.md  nodes.py  pyproject.toml  requirements.txt  wf.json
configs/opensora/inference/: 16x256x256.py  16x512x512.py  64x512x512.py
docs/: README_zh.md
opensora/datasets/: __init__.py  utils.py
opensora/utils/: config_utils.py
scripts/: inference.py  train.py
tests/: test_seq_parallel_attention.py  test_t5_shardformer.py
tools/scenedetect/: scene_detect.py
